add total data in nicaragua-data.json and create drilldonws

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				height: 500px;
 				width: 100%;
 				padding: 1rem;
-				margin: 150px auto 0 auto;
+				margin: 150px auto 50px auto;
 			}
 
 		</style>
