add new js file and update the nicaragua map

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="https://code.highcharts.com/maps/modules/data.js"></script>
 		<script src="https://code.highcharts.com/maps/modules/drilldown.js"></script>
 		<script src="https://code.highcharts.com/mapdata/countries/ni/ni-all.js"></script>
+		<script src="maps/v1/nicaragua.js"></script>
 		<script src="maps.js"></script>
 	</body>
 </html>
