--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
 		<style>
 			body {
 				margin: 0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				height: 100vh;
 			}
 			#nicaragua {
 				border: 1px solid #ccc;
 				border-radius: 4px;
 				box-shadow: 0px 1px 15px rgba(0,0,0,.1);
-				max-width: 500px;
-				height: 500px;
+				max-width: 600px;
+				height: 600px;
 				width: 100%;
 				padding: 1rem;
-				margin: 150px auto 50px auto;
 			}
 
 		</style>
